hydroflow/tests/compile-fail/surface_port_join_nested.stderr
error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join_nested.rs:5:55
  |
5 |         a = source_iter(10..20) -> map(|x| (x, x)) -> (my_join = join() -> for_each(std::mem::drop));
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join_nested.rs:6:55
  |
6 |         b = source_iter(20..30) -> map(|x| (x, x)) -> my_join;
  |                                                       ^^^^^^^

error: Missing expected input port(s): `0`, `1`.
 --> tests/compile-fail/surface_port_join_nested.rs:5:66
  |
5 |         a = source_iter(10..20) -> map(|x| (x, x)) -> (my_join = join() -> for_each(std::mem::drop));
  |                                                                  ^^^^^^
